# dummy_filter_loader

./: CMakeLists.txt  README.md  package.xml
params/: params.yaml
src/: filter_loader.cpp
