<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_filter_loader</name>
  <version>0.0.0</version>
  <description>Dummy filter loader.</description>

  <maintainer email="oscar.martinez@pal-robotics.com">Oscar Martinez</maintainer>

  <license>Apache License 2.0</license>

  <author email="oscar.martinez@pal-robotics.com">Oscar Martinez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>filters</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
